clusters/prod/apps/jenkins/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    app: jenkins
    component: jenkins
