clusters/prod/apps/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  labels:
    app: jenkins
    component: ingress
  annotations:
    cert-manager.io/cluster-issuer: "kommander-ca"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: kommander-traefik
  rules:
    - host: jenkins.app.local
      http:
        paths:
          - path: /dkp/kommander/jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins-service
                port:
                  number: 8080
  tls:
    - hosts:
        - jenkins.app.local
      secretName: jenkins-tls
